# todoist-capacities-sync

./: .dockerignore  .gitignore  API.md  AREAS_DATABASE_SETUP.md  AREAS_DUPLICATION_SUMMARY.md  CHANGES_2025-10-28.md  CLAUDE.md  CODE_AUDIT.md  CODE_REVIEW.md  COST_OPTIMIZATION.md  DEBUGGING_RESULTS.md  DEPLOYMENT.md  DEPLOYMENT_BLOCKERS.md  DEPLOYMENT_STATUS.md  DEPLOYMENT_SUCCESS.md  DESIGN_FIX_AREAS_RACE_CONDITION.md  Dockerfile  ENHANCEMENT_IDEAS.md  FEATURE_BACKLINKS.md  FEATURE_PARA_AREAS.md  FINAL_REVERT_EXPLANATION.md  FIXES_COMPLETED_TASKS.md  FIX_PARA_AREA_LABELS.md  GETTING_STARTED.md  INVESTIGATION_NOTION_API_BUG.md  NOTION_SETUP.md  PROJECT_STATUS.md  QUICKSTART.md  QUICK_DEBUG.md  README.md  START_HERE.md  SYNC_RULES.md  TESTING.md  Todoist-Capacities Sync.md  WEBHOOK_FIX.md  WEBHOOK_SETUP.md  WEBHOOK_SETUP_QUICK.md  WEBHOOK_TROUBLESHOOTING.md  check_recent_sync.sh  pyproject.toml  (+6 more)
app/: __init__.py  capacities_client.py  handlers.py  logging_setup.py  main.py  mapper.py  migration.py  models.py  notion_client.py  pubsub_worker.py  reverse_mapper.py  settings.py  store.py  todoist_client.py  utils.py
infra/terraform/: cloud_run.tf  firestore.tf  main.tf  outputs.tf  pubsub.tf  scheduler.tf  secrets.tf  (+2 more)
scripts/: cleanup_duplicate_areas.py  deploy.sh  run_cleanup_with_secrets.sh  run_local.sh  seed_secrets.sh  setup.sh  test_notion_api.py
tests/: __init__.py  conftest.py  test_bidirectional_sync.py  test_end_to_end.py  test_handlers.py  test_mapper.py  test_models.py  test_notion_client.py  test_store.py  test_todoist_client.py  test_utils.py
